src/test/deca/syntax/invalid/created/miscellaneous/NaN.deca
// Description :
//    test d'un float NaN
//
// Resultats :
//		Erreur lexicographique
//    	Ligne 8:  float trop petit

{
float a = 1.00000e-99;
}